Fix advertisement label broken in skins other than default

--- a/src/styles/ads-label.scss
+++ b/src/styles/ads-label.scss
@@ -2,7 +2,7 @@
   display: none!important;
 }
 
-.vjs-default-skin div.vjs-ads-label {
+.vjs-ads-label {
   font-size: 13px;
   line-height: 30px;
   font-weight: normal;
